自定义组合控件&根据设置状态实现启动界面升级对话框的弹出与否。

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,6 +26,7 @@
             </intent-filter>
         </activity>
         <activity android:name="com.yafrees.mobilesafe.activity.HomeActivity" />
+        <activity android:name="com.yafrees.mobilesafe.activity.SettingActivity" />
     </application>
 
 </manifest>
