布局手机防盗界面的第一个界面。

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,6 +27,8 @@
         </activity>
         <activity android:name="com.yafrees.mobilesafe.activity.HomeActivity" />
         <activity android:name="com.yafrees.mobilesafe.activity.SettingActivity" />
+        <activity android:name="com.yafrees.mobilesafe.activity.LostAndFind" />
+        <activity android:name="com.yafrees.mobilesafe.activity.Setup1Activity" />
     </application>
 
 </manifest>
