手机防盗功能的四个设置向导界面的完成&设置向导界面和手机防盗界面跳转的实现。

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,6 +29,9 @@
         <activity android:name="com.yafrees.mobilesafe.activity.SettingActivity" />
         <activity android:name="com.yafrees.mobilesafe.activity.LostAndFind" />
         <activity android:name="com.yafrees.mobilesafe.activity.Setup1Activity" />
+        <activity android:name="com.yafrees.mobilesafe.activity.Setup2Activity" />
+        <activity android:name="com.yafrees.mobilesafe.activity.Setup3Activity" />
+        <activity android:name="com.yafrees.mobilesafe.activity.Setup4Activity" />
     </application>
 
 </manifest>
