--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
         android:allowBackup="true"
@@ -34,6 +35,7 @@
         <activity android:name="com.yafrees.mobilesafe.activity.Setup2Activity" />
         <activity android:name="com.yafrees.mobilesafe.activity.Setup3Activity" />
         <activity android:name="com.yafrees.mobilesafe.activity.Setup4Activity" />
+        <activity android:name="com.yafrees.mobilesafe.activity.SelectContactActivity" />
 
         <receiver android:name="com.yafrees.mobilesafe.receiver.BootCompleteReceiver" >
             <intent-filter>
