高级工具---号码归属地查询的UI界面。

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -41,6 +41,8 @@
         <activity android:name="com.yafrees.mobilesafe.activity.Setup4Activity" />
         <activity android:name="com.yafrees.mobilesafe.activity.SelectContactActivity" />
         <activity android:name="com.yafrees.mobilesafe.activity.LockScreenActivity" />
+        <activity android:name="com.yafrees.mobilesafe.activity.AToolsActivity" />
+        <activity android:name="com.yafrees.mobilesafe.activity.NumberAddressQueryActivity" />
 
         <receiver android:name="com.yafrees.mobilesafe.receiver.BootCompleteReceiver" >
             <intent-filter>
