来电号码归属地的显示。

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -70,6 +70,7 @@
         </receiver>
 
         <service android:name="com.yafrees.mobilesafe.service.GPSService" />
+        <service android:name="com.yafrees.mobilesafe.service.AddressService" />
     </application>
 
 </manifest>
